--- a/Lab1/src/main/resources/application.properties
+++ b/Lab1/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=Lab1
+# Server Configuration
+server.port=8080
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# PostgreSQL Configuration (for future use)
+spring.datasource.url=jdbc:postgresql://localhost:5432/lab1_db
+spring.datasource.username=postgres
+spring.datasource.password=tintin7335
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Logging
+logging.level.org.springframework.security=DEBUG
