Embedded Lab 2 + Lab 3 into Lab1 project files

--- a/Lab1/src/main/resources/application.properties
+++ b/Lab1/src/main/resources/application.properties
@@ -7,13 +7,48 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-# PostgreSQL Configuration (for future use)
-spring.datasource.url=jdbc:postgresql://localhost:5432/lab1_db
+
+# ============================================
+# DATABASE CONFIGURATION (PostgreSQL)
+# ============================================
+spring.datasource.url=jdbc:postgresql://localhost:5432/j6security2
 spring.datasource.username=postgres
-spring.datasource.password=tintin7335
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=123
+
+# ============================================
+# JPA/HIBERNATE CONFIGURATION
+# ============================================
+# IMPORTANT: Change from 'create' to 'none'
+spring.jpa.hibernate.ddl-auto=none
+
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Logging
-logging.level.org.springframework.security=DEBUG
+# CRITICAL: Preserve exact table/column names
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# ============================================
+# LOGGING
+# ============================================
+logging.level.org.springframework.security=INFO
+logging.level.org.hibernate.SQL=DEBUG
+
+# ============================================
+# ERROR HANDLING
+# ============================================
+server.error.whitelabel.enabled=false
+server.error.include-message=always
+server.error.include-stacktrace=never
+
+# ============================================
+# GOOGLE OAUTH2 - ONLY UNCOMMENT IF YOU WANT IT
+# ============================================
+# Leave these commented out until you configure Google Cloud Console
+# Otherwise Spring Boot will look for OAuth2 config and fail
+
+spring.security.oauth2.client.registration.google.client-id=625196047099-eo9o4o5nl4chmjnr9354nmvtnv3m8htj.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
