--- a/Lab1/src/main/resources/application.properties
+++ b/Lab1/src/main/resources/application.properties
@@ -48,7 +48,7 @@ server.error.include-stacktrace=never
 # Leave these commented out until you configure Google Cloud Console
 # Otherwise Spring Boot will look for OAuth2 config and fail
 
-spring.security.oauth2.client.registration.google.client-id=625196047099-eo9o4o5nl4chmjnr9354nmvtnv3m8htj.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
