--- a/Lab1/src/main/resources/application.properties
+++ b/Lab1/src/main/resources/application.properties
@@ -8,26 +8,29 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 
-# ============================================
-# DATABASE CONFIGURATION (PostgreSQL)
-# ============================================
-spring.datasource.url=jdbc:postgresql://localhost:5432/j6security2
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=J6Security2;encrypt=false;trustServerCertificate=true
+spring.datasource.username=sa
 spring.datasource.password=123
 
-# ============================================
-# JPA/HIBERNATE CONFIGURATION
-# ============================================
-# IMPORTANT: Change from 'create' to 'none'
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+# Connection pool
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+
+# ============================================
+# JPA/HIBERNATE CONFIGURATION FOR MSSQL
+# ============================================
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# CRITICAL: Preserve exact table/column names
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+# CRITICAL: Change dialect to SQL Server
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+# CRITICAL: Preserve case-sensitive names
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 
 # ============================================
 # LOGGING
@@ -41,12 +44,6 @@ logging.level.org.hibernate.SQL=DEBUG
 server.error.whitelabel.enabled=false
 server.error.include-message=always
 server.error.include-stacktrace=never
-
-# ============================================
-# GOOGLE OAUTH2 - ONLY UNCOMMENT IF YOU WANT IT
-# ============================================
-# Leave these commented out until you configure Google Cloud Console
-# Otherwise Spring Boot will look for OAuth2 config and fail
 
 spring.security.oauth2.client.registration.google.client-id=
 spring.security.oauth2.client.registration.google.client-secret=
