--- a/Lab3/src/main/resources/application.properties
+++ b/Lab3/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=Lab3
+
+# MSSQL
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=J6Security;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+
+# Google OAuth2
+spring.security.oauth2.client.registration.google.client-id=625196047099-ba5lmh859o1dj4pbc5f8v4ijodakkck0.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
