--- a/TS00680_NguyenMinhNhat/frontend/ts00680_final/package.json
+++ b/TS00680_NguyenMinhNhat/frontend/ts00680_final/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "ts00680_final",
   "type": "module",
   "private": true,
   "scripts": {
@@ -10,11 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^4.2.1",
+    "nuxt": "^4.2.2",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3",
-    "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3",
-    "firebase": "^10.7.2"
+    "vue-router": "^4.6.4"
   }
 }
